environments/example-es-truststore/services/fleetms/base/config/service.yaml
---
# Source: fleetms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "fleet-ms"
  labels:
    chart: "fleetms-1.0.0"
    app.kubernetes.io/part-of: refarch-kc
spec:
  type: NodePort
  ports:
  - name: http
    port: 9080
    nodePort: 31300
  - name: https
    port: 9443
  selector:
    app: "fleetms-selector"
